<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rf_interface_ros</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for RF interface</description>
  <maintainer email="sai@todo.todo">Sai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>seeker_msgs</depend>
  <depend>rf_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
